--- a/index.html
+++ b/index.html
@@ -5,7 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bertley Priscilla</title>
 </head>
-<body>
+<body id="top">
+    <h1> Welcome to My AltSchool Page</h1>
+    <h2> Basic Information</h2>
+    <ul>
+        <li><strong>Full Name:</strong> Bertley Priscilla</li>
+        <li><strong>AltSchool ID:</strong> ALT/SOE/025/4343</li>
+        <li><strong>Track:</strong> Cloud Engineering</li>
+        <li><strong>Email:</strong> berteypriscy@gmail.com</li>
+    </ul>
     
+    <h2>Biography</h2>
+    <p>
+        I am a passionate learner and aspiring cloud engineer with a keen interest in technology and its applications. My journey in the tech world has been driven by curiosity and a desire to solve real-world problems through innovative solutions. I am excited to be part of the AltSchool community, where I can enhance my skills and collaborate with like-minded individuals.
+    </p>
+
+    <h2>Why I joined AltSchool Africa</h2>
+    <p>
+        I joined AltSchool Africa to gain the skills and knowledge necessary to excel in the field of cloud engineering. The program's focus on practical, hands-on learning aligns perfectly with my learning style, and I am eager to collaborate with industry professionals and fellow students who share my passion for technology. I believe that AltSchool will provide me with the resources and support I need to achieve my career goals and make a meaningful impact in the tech industry.
+    </p>
+
+    <h2>My Goals for the School of Engineering</h2>
+    <ul>
+        <li>Develop a strong foundation in cloud computing concepts and technologies.</li>
+        <li>Gain hands-on experience with cloud platforms and tools.</li>
+        <li>Collaborate with peers on real-world projects to enhance problem-solving skills.</li>
+        <li>Prepare for industry certifications in cloud engineering.</li>
+        <li>Build a professional network within the tech community.</li>
+    </ul>
+
+    <p><a href="#top">Back to Top</a></p>
 </body>
 </html>
